az-cli/aks/deployments/ingress/linux/one-be/01-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ing-controller
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /app00(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: app00
            port: 
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: app00
            port:
              number: 80
